--- a/.env
+++ b/.env
@@ -1,2 +1,4 @@
 SECRET_KEY=JfoZyeGIIVIMUw6jhRwwBQ_Az9NT2lKxbZQF43o5r8Y
 ALGORITHM=HS256
+MAIL_PASSWORD=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
+MAIL_USERNAME=apikey
