--- a/requirements.txt
+++ b/requirements.txt
@@ -2,14 +2,16 @@ aiosmtplib==3.0.2
 alembic==1.14.0
 annotated-types==0.7.0
 anyio==4.7.0
-bcrypt==4.2.1
+bcrypt==3.2.0
 blinker==1.9.0
 certifi==2024.8.30
+cffi==1.17.1
 click==8.1.7
 dnspython==2.7.0
 ecdsa==0.19.0
 email_validator==2.2.0
 exceptiongroup==1.2.2
+Faker==33.3.1
 fastapi==0.115.6
 fastapi-cli==0.0.6
 fastapi-mail==1.4.2
@@ -18,18 +20,24 @@ httpcore==1.0.7
 httptools==0.6.4
 httpx==0.28.1
 idna==3.10
+iniconfig==2.0.0
 Jinja2==3.1.4
 Mako==1.3.8
 markdown-it-py==3.0.0
 MarkupSafe==3.0.2
 mdurl==0.1.2
+packaging==24.2
 passlib==1.7.4
+pluggy==1.5.0
 psycopg2-binary==2.9.10
 pyasn1==0.6.1
+pycparser==2.22
 pydantic==2.10.3
 pydantic-settings==2.6.1
 pydantic_core==2.27.1
 Pygments==2.18.0
+pytest==8.3.4
+python-dateutil==2.9.0.post0
 python-decouple==3.8
 python-dotenv==1.0.1
 python-jose==3.3.0
@@ -43,6 +51,7 @@ six==1.17.0
 sniffio==1.3.1
 SQLAlchemy==2.0.36
 starlette==0.41.3
+tomli==2.2.1
 typer==0.15.1
 typing_extensions==4.12.2
 uvicorn==0.32.1
