--- a/.env
+++ b/.env
@@ -1,5 +1,4 @@
 SECRET_KEY=JfoZyeGIIVIMUw6jhRwwBQ_Az9NT2lKxbZQF43o5r8Y
 ALGORITHM=HS256
-MAIL_PASSWORD=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
-MAIL_USERNAME=apikey
-MAIL_FROM=ma@kpentagdigital.com
+DATABASE_URL=postgresql://postgres:Enigma.100@localhost:5432/crowdfunddb
+# DATABASE_URL=postgresql://sokdavms:S0B-mwT_zwnK-YcJNpKB9Zb1F-2Z_rLb@rogue.db.elephantsql.com/sokdavms
