--- a/alembic.ini
+++ b/alembic.ini
@@ -61,7 +61,7 @@ version_path_separator = os  # Use os.pathsep. Default configuration used for ne
 # are written from script.py.mako
 # output_encoding = utf-8
 
-sqlalchemy.url = postgresql://sokdavms:S0B-mwT_zwnK-YcJNpKB9Zb1F-2Z_rLb@rogue.db.elephantsql.com/sokdavms
+sqlalchemy.url = env:DATABASE_URL
 
 
 [post_write_hooks]
