more tests added

--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
 SECRET_KEY=JfoZyeGIIVIMUw6jhRwwBQ_Az9NT2lKxbZQF43o5r8Y
 ALGORITHM=HS256
-DATABASE_URL=postgresql://postgres:Enigma.100@localhost:5432/crowdfunddb
-# DATABASE_URL=postgresql://sokdavms:S0B-mwT_zwnK-YcJNpKB9Zb1F-2Z_rLb@rogue.db.elephantsql.com/sokdavms
+# DATABASE_URL=postgresql://postgres:Enigma.100@localhost:5432/crowdfunddb
+DATABASE_URL=postgresql://sokdavms:S0B-mwT_zwnK-YcJNpKB9Zb1F-2Z_rLb@rogue.db.elephantsql.com/sokdavms
